Updated Realm#cycleWeather to use Streams more effectively